language_tests/outputs/invalid/copyable_non_copyable_field.out
error: cannot derive Copy for 'Wrapper': field 'inner' of type 'NoCopy' is not Copy
 -> language_tests/source_files/invalid/copyable_non_copyable_field.tr:11:16
	struct Wrapper: Copy {
	                ^^^^
